[package]
name = "p-wav-cli"
version = "0.1.0"
edition = "2024"

[dependencies]

clap = { version = "4.0", features = ["derive"] } # 使用 clap 的 derive 宏简化参数定义
rand = "0.8.5" # 添加 rand 依赖

symphonia = { version = "0.5.4", features = [
    "mp3",      # MP3 解码
    "flac",     # FLAC 解码
    "aac",      # AAC (M4A) 解码
    "vorbis",   # OGG Vorbis 解码
    "wav",      # WAV 解码
    "pcm",      # 原始 PCM 数据
   # FFmpeg 兼容格式 (某些容器)
] }
hound = "3.5"